# predicates

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  adobe-predicates-config.cmake.in
include/adobe/predicates/: predicates.hpp
src/: predicates.cpp
